--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^1.0.0",
+    "@astrojs/mdx": "^1.0.3",
     "@astrojs/svelte": "^4.0.0",
-    "astro": "^3.0.4",
+    "astro": "^3.0.12",
     "astro-vscode": "^2.3.1",
-    "rehype-external-links": "^2.1.0",
     "svelte": "^4.2.0"
   },
   "dependencies": {
     "@astrojs/rss": "^3.0.0",
     "@giscus/svelte": "^2.3.0",
+    "@astrojs/sitemap": "^3.0.0",
     "@nanostores/persistent": "^0.9.1",
-    "mdast-util-to-string": "^4.0.0",
-    "reading-time": "^1.5.0"
+    "nanostores": "^0.9.3",
+    "reading-time": "^1.5.0",
+    "sharp": "^0.32.5"
+  },
+  "volta": {
+    "node": "18.17.1"
   }
 }
