--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "devDependencies": {
     "@astrojs/mdx": "^1.0.3",
-    "@astrojs/svelte": "^4.0.0",
+    "@astrojs/svelte": "^4.0.2",
     "astro": "^3.0.12",
     "astro-vscode": "^2.3.1",
     "svelte": "^4.2.0"
   },
   "dependencies": {
     "@astrojs/rss": "^3.0.0",
-    "@giscus/svelte": "^2.3.0",
     "@astrojs/sitemap": "^3.0.0",
+    "@giscus/svelte": "^2.3.0",
     "@nanostores/persistent": "^0.9.1",
+    "mdast-util-to-string": "^4.0.0",
     "nanostores": "^0.9.3",
     "reading-time": "^1.5.0",
     "sharp": "^0.32.5"
